<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/ocr_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/type"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/layout_license_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"

                    android:padding="4dp"
                    android:text="@string/license_number"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_license_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/layout_license_number_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/name"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/layout_rrn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/rrn"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_rrn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/issue_date"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_issue_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/layout_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/organization"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_organization"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/layout_acfn_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/layout_acfn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/acfn"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_acfn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/layout_license_aptitude_date_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/layout_license_aptitude_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/license_aptitude_date"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_license_aptitude_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/layout_license_type_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/layout_license_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="#33000000"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/license_type"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_license_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/text_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" />

</LinearLayout>
